// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleSubNavItem States renders expanded styling if provided 1`] = `
<CollapsibleSubNavItem
  expanded={true}
  label="Header"
>
  <AccordionContainer
    expanded={true}
    onStateChange={[Function]}
  >
    <div>
      <div
        role="heading"
      >
        <CollapsibleSubNavItem__StyledSubNavItemHeader
          aria-controls="garden-accordion-container-1-panel"
          aria-expanded={true}
          expanded={true}
          id="garden-accordion-container-1-header"
          label="Header"
          onClick={[Function]}
        >
          <SubNavItem
            aria-controls="garden-accordion-container-1-panel"
            aria-expanded={true}
            className="c-chrome__subnav__item--header is-expanded "
            data-garden-id="chrome.collapsible_sub_nav_item"
            data-garden-version="version"
            expanded={true}
            id="garden-accordion-container-1-header"
            label="Header"
            onClick={[Function]}
          >
            <KeyboardFocusContainer>
              <SubNavItem__StyledSubNavItem
                aria-controls="garden-accordion-container-1-panel"
                aria-expanded={true}
                className="c-chrome__subnav__item--header is-expanded "
                data-garden-id="chrome.collapsible_sub_nav_item"
                data-garden-version="version"
                expanded={true}
                focused={false}
                id="garden-accordion-container-1-header"
                label="Header"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                tabIndex={0}
              >
                <button
                  aria-controls="garden-accordion-container-1-panel"
                  aria-expanded={true}
                  className="c-chrome__subnav__item--header is-expanded c-chrome__subnav__item "
                  data-garden-id="chrome.collapsible_sub_nav_item"
                  data-garden-version="version"
                  id="garden-accordion-container-1-header"
                  label="Header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  tabIndex={0}
                />
              </SubNavItem__StyledSubNavItem>
            </KeyboardFocusContainer>
          </SubNavItem>
        </CollapsibleSubNavItem__StyledSubNavItemHeader>
      </div>
      <CollapsibleSubNavItem__StyledSubNavPanel
        aria-hidden={false}
        aria-labelledby="garden-accordion-container-1-header"
        hidden={false}
        id="garden-accordion-container-1-panel"
        role="region"
      >
        <div
          aria-hidden={false}
          aria-labelledby="garden-accordion-container-1-header"
          className="c-chrome__subnav__panel "
          data-garden-id="chrome.collapsible_sub_nav_item_panel"
          data-garden-version="version"
          hidden={false}
          id="garden-accordion-container-1-panel"
          role="region"
        >
          <p>
            Content
          </p>
        </div>
      </CollapsibleSubNavItem__StyledSubNavPanel>
    </div>
  </AccordionContainer>
</CollapsibleSubNavItem>
`;

exports[`CollapsibleSubNavItem States renders focused styling if provided 1`] = `
<CollapsibleSubNavItem
  focused={true}
  label="Header"
>
  <AccordionContainer
    onStateChange={[Function]}
  >
    <div>
      <div
        role="heading"
      >
        <CollapsibleSubNavItem__StyledSubNavItemHeader
          aria-controls="garden-accordion-container-2-panel"
          focused={true}
          id="garden-accordion-container-2-header"
          label="Header"
          onClick={[Function]}
        >
          <SubNavItem
            aria-controls="garden-accordion-container-2-panel"
            className="c-chrome__subnav__item--header "
            data-garden-id="chrome.collapsible_sub_nav_item"
            data-garden-version="version"
            focused={true}
            id="garden-accordion-container-2-header"
            label="Header"
            onClick={[Function]}
          >
            <KeyboardFocusContainer>
              <SubNavItem__StyledSubNavItem
                aria-controls="garden-accordion-container-2-panel"
                className="c-chrome__subnav__item--header "
                data-garden-id="chrome.collapsible_sub_nav_item"
                data-garden-version="version"
                focused={true}
                id="garden-accordion-container-2-header"
                label="Header"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                tabIndex={0}
              >
                <button
                  aria-controls="garden-accordion-container-2-panel"
                  className="c-chrome__subnav__item--header c-chrome__subnav__item is-focused "
                  data-garden-id="chrome.collapsible_sub_nav_item"
                  data-garden-version="version"
                  id="garden-accordion-container-2-header"
                  label="Header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  tabIndex={0}
                />
              </SubNavItem__StyledSubNavItem>
            </KeyboardFocusContainer>
          </SubNavItem>
        </CollapsibleSubNavItem__StyledSubNavItemHeader>
      </div>
      <CollapsibleSubNavItem__StyledSubNavPanel
        aria-hidden={true}
        aria-labelledby="garden-accordion-container-2-header"
        hidden={true}
        id="garden-accordion-container-2-panel"
        role="region"
      >
        <div
          aria-hidden={true}
          aria-labelledby="garden-accordion-container-2-header"
          className="c-chrome__subnav__panel is-hidden "
          data-garden-id="chrome.collapsible_sub_nav_item_panel"
          data-garden-version="version"
          hidden={true}
          id="garden-accordion-container-2-panel"
          role="region"
        >
          <p>
            Content
          </p>
        </div>
      </CollapsibleSubNavItem__StyledSubNavPanel>
    </div>
  </AccordionContainer>
</CollapsibleSubNavItem>
`;

exports[`CollapsibleSubNavItem States renders hovered styling if provided 1`] = `
<CollapsibleSubNavItem
  hovered={true}
  label="Header"
>
  <AccordionContainer
    onStateChange={[Function]}
  >
    <div>
      <div
        role="heading"
      >
        <CollapsibleSubNavItem__StyledSubNavItemHeader
          aria-controls="garden-accordion-container-3-panel"
          hovered={true}
          id="garden-accordion-container-3-header"
          label="Header"
          onClick={[Function]}
        >
          <SubNavItem
            aria-controls="garden-accordion-container-3-panel"
            className="c-chrome__subnav__item--header "
            data-garden-id="chrome.collapsible_sub_nav_item"
            data-garden-version="version"
            hovered={true}
            id="garden-accordion-container-3-header"
            label="Header"
            onClick={[Function]}
          >
            <KeyboardFocusContainer>
              <SubNavItem__StyledSubNavItem
                aria-controls="garden-accordion-container-3-panel"
                className="c-chrome__subnav__item--header "
                data-garden-id="chrome.collapsible_sub_nav_item"
                data-garden-version="version"
                focused={false}
                hovered={true}
                id="garden-accordion-container-3-header"
                label="Header"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                tabIndex={0}
              >
                <button
                  aria-controls="garden-accordion-container-3-panel"
                  className="c-chrome__subnav__item--header c-chrome__subnav__item is-hovered "
                  data-garden-id="chrome.collapsible_sub_nav_item"
                  data-garden-version="version"
                  id="garden-accordion-container-3-header"
                  label="Header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  tabIndex={0}
                />
              </SubNavItem__StyledSubNavItem>
            </KeyboardFocusContainer>
          </SubNavItem>
        </CollapsibleSubNavItem__StyledSubNavItemHeader>
      </div>
      <CollapsibleSubNavItem__StyledSubNavPanel
        aria-hidden={true}
        aria-labelledby="garden-accordion-container-3-header"
        hidden={true}
        id="garden-accordion-container-3-panel"
        role="region"
      >
        <div
          aria-hidden={true}
          aria-labelledby="garden-accordion-container-3-header"
          className="c-chrome__subnav__panel is-hidden "
          data-garden-id="chrome.collapsible_sub_nav_item_panel"
          data-garden-version="version"
          hidden={true}
          id="garden-accordion-container-3-panel"
          role="region"
        >
          <p>
            Content
          </p>
        </div>
      </CollapsibleSubNavItem__StyledSubNavPanel>
    </div>
  </AccordionContainer>
</CollapsibleSubNavItem>
`;

exports[`CollapsibleSubNavItem States renders hovered styling if provided 2`] = `
<CollapsibleSubNavItem
  hovered={true}
  label="Header"
>
  <AccordionContainer
    onStateChange={[Function]}
  >
    <div>
      <div
        role="heading"
      >
        <CollapsibleSubNavItem__StyledSubNavItemHeader
          aria-controls="garden-accordion-container-3-panel"
          hovered={true}
          id="garden-accordion-container-3-header"
          label="Header"
          onClick={[Function]}
        >
          <SubNavItem
            aria-controls="garden-accordion-container-3-panel"
            className="c-chrome__subnav__item--header "
            data-garden-id="chrome.collapsible_sub_nav_item"
            data-garden-version="version"
            hovered={true}
            id="garden-accordion-container-3-header"
            label="Header"
            onClick={[Function]}
          >
            <KeyboardFocusContainer>
              <SubNavItem__StyledSubNavItem
                aria-controls="garden-accordion-container-3-panel"
                className="c-chrome__subnav__item--header "
                data-garden-id="chrome.collapsible_sub_nav_item"
                data-garden-version="version"
                focused={false}
                hovered={true}
                id="garden-accordion-container-3-header"
                label="Header"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                tabIndex={0}
              >
                <button
                  aria-controls="garden-accordion-container-3-panel"
                  className="c-chrome__subnav__item--header c-chrome__subnav__item is-hovered "
                  data-garden-id="chrome.collapsible_sub_nav_item"
                  data-garden-version="version"
                  id="garden-accordion-container-3-header"
                  label="Header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  tabIndex={0}
                />
              </SubNavItem__StyledSubNavItem>
            </KeyboardFocusContainer>
          </SubNavItem>
        </CollapsibleSubNavItem__StyledSubNavItemHeader>
      </div>
      <CollapsibleSubNavItem__StyledSubNavPanel
        aria-hidden={true}
        aria-labelledby="garden-accordion-container-3-header"
        hidden={true}
        id="garden-accordion-container-3-panel"
        role="region"
      >
        <div
          aria-hidden={true}
          aria-labelledby="garden-accordion-container-3-header"
          className="c-chrome__subnav__panel is-hidden "
          data-garden-id="chrome.collapsible_sub_nav_item_panel"
          data-garden-version="version"
          hidden={true}
          id="garden-accordion-container-3-panel"
          role="region"
        >
          <p>
            Content
          </p>
        </div>
      </CollapsibleSubNavItem__StyledSubNavPanel>
    </div>
  </AccordionContainer>
</CollapsibleSubNavItem>
`;

exports[`CollapsibleSubNavItem renders default styling 1`] = `
<CollapsibleSubNavItem
  label="Header"
>
  <AccordionContainer
    onStateChange={[Function]}
  >
    <div>
      <div
        role="heading"
      >
        <CollapsibleSubNavItem__StyledSubNavItemHeader
          aria-controls="garden-accordion-container-0-panel"
          id="garden-accordion-container-0-header"
          label="Header"
          onClick={[Function]}
        >
          <SubNavItem
            aria-controls="garden-accordion-container-0-panel"
            className="c-chrome__subnav__item--header "
            data-garden-id="chrome.collapsible_sub_nav_item"
            data-garden-version="version"
            id="garden-accordion-container-0-header"
            label="Header"
            onClick={[Function]}
          >
            <KeyboardFocusContainer>
              <SubNavItem__StyledSubNavItem
                aria-controls="garden-accordion-container-0-panel"
                className="c-chrome__subnav__item--header "
                data-garden-id="chrome.collapsible_sub_nav_item"
                data-garden-version="version"
                focused={false}
                id="garden-accordion-container-0-header"
                label="Header"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                tabIndex={0}
              >
                <button
                  aria-controls="garden-accordion-container-0-panel"
                  className="c-chrome__subnav__item--header c-chrome__subnav__item "
                  data-garden-id="chrome.collapsible_sub_nav_item"
                  data-garden-version="version"
                  id="garden-accordion-container-0-header"
                  label="Header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  tabIndex={0}
                />
              </SubNavItem__StyledSubNavItem>
            </KeyboardFocusContainer>
          </SubNavItem>
        </CollapsibleSubNavItem__StyledSubNavItemHeader>
      </div>
      <CollapsibleSubNavItem__StyledSubNavPanel
        aria-hidden={true}
        aria-labelledby="garden-accordion-container-0-header"
        hidden={true}
        id="garden-accordion-container-0-panel"
        role="region"
      >
        <div
          aria-hidden={true}
          aria-labelledby="garden-accordion-container-0-header"
          className="c-chrome__subnav__panel is-hidden "
          data-garden-id="chrome.collapsible_sub_nav_item_panel"
          data-garden-version="version"
          hidden={true}
          id="garden-accordion-container-0-panel"
          role="region"
        >
          <p>
            Content
          </p>
        </div>
      </CollapsibleSubNavItem__StyledSubNavPanel>
    </div>
  </AccordionContainer>
</CollapsibleSubNavItem>
`;
